2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/set-oacutoff-2.pk: Escape dots in regexps.
	* testsuite/poke.pkl/printf-25.pk: Likewise.
	* testsuite/poke.pkl/format-28.pk: Likewise.
	* testsuite/poke.pkl/format-20.pk: Likewise.
	* testsuite/poke.pkl/format-19.pk: Likewise.
	* testsuite/poke.cmd/set-oindent.pk: Likewise.
	* testsuite/poke.cmd/set-odepth-1.pk: Likewise.

2024-09-20  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Enable pretty-printing, tree output
	mode and pager by default if no quiet mode.
	* doc/poke.texi (Simple Init File): Update accordingly.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-alloc.c (pvm_alloc_gc): Define.
	* libpoke/pkl-insn.def (PKL_INSN_GC): Define.
	* libpoke/pvm.jitter (gc): New instruction.
	* testsuite/poke.pvm/pvm-insns-test.pk: Add test for gc instruction.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (PK_FILE_F_RDONLY): Define.
	(pk_cmd_file): Acknowledge /r flag in file dot-command.
	* poke/pk-cmd-ios.pk (pk_cmd_file): Likewise.
	* poke/pk-cmd-help.pk: Document /r flag in online documentation.
	* testsuite/poke.cmd/file-rdonly-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* doc/poke.texi (Files as IO Spaces): Document /r.
	(file command): Likewise.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h: Remove spurious definition of
	pvm_make_mapinfo.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support IOS_F_* constants as RAS values.
	* libpoke/pkl-asm.pks (remap): Do not remap in non-volatile
	read-only IO spaces.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add test for iovolatile.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-info.pk (pk_info_ios): Fix printing of the type of
	IO spaces in table.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev.h (struct ios_dev_if): New field